test/org/midica/testfiles/failing/eff-cd-note.midica
INCLUDE inc/instruments.midica


0: ctrl_dest.note(c)

